--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint/fix": "next lint --fix"
   },
   "dependencies": {
+    "mobx": "^6.6.2",
+    "mobx-react": "^7.5.3",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
