--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint/fix": "next lint --fix"
   },
   "dependencies": {
+    "antd": "^4.23.6",
     "classnames": "^2.3.2",
     "mobx": "^6.6.2",
     "mobx-react": "^7.5.3",
